[main-private] code inspected